Add CI workflow, logging with Log4j, and Spotless configuration
- Removed `PointLight` class.
- Introduced CI workflow with Spotless formatting check.
- Added Log4j dependency for logging across the project.
- Enhanced code formatting and consistency with Spotless integration.