@@ -18,13 +18,13 @@ public class SimpleCamera3D {
     public void rotate(float deltaYaw, float deltaPitch) {
         yaw += deltaYaw;
         pitch += deltaPitch;
-        pitch = Math.max((float) -Math.PI / 2 + 0.01f, Math.min((float) Math.PI / 2 - 0.01f, pitch));
+        pitch = Math.clamp(pitch, (float) -Math.PI / 2 + 0.01f, (float) Math.PI / 2 - 0.01f);
         updateView();
     }
 
     private void updateView() {
         Vector3f front = getForward();
-        Vector3f right = front.cross(new Vector3f(0,1,0), new Vector3f()).normalize();
+        Vector3f right = front.cross(new Vector3f(0, 1, 0), new Vector3f()).normalize();
         Vector3f up = right.cross(front, new Vector3f()).normalize();
         viewMatrix.identity();
         viewMatrix.lookAt(position, position.add(front, new Vector3f()), up);
@@ -32,21 +32,30 @@ public class SimpleCamera3D {
 
     public Vector3f getForward() {
         return new Vector3f(
-            (float) (Math.cos(pitch) * Math.cos(yaw)),
-            (float) Math.sin(pitch),
-            (float) (Math.cos(pitch) * Math.sin(yaw))
-        ).normalize();
+                        (float) (Math.cos(pitch) * Math.cos(yaw)),
+                        (float) Math.sin(pitch),
+                        (float) (Math.cos(pitch) * Math.sin(yaw)))
+                .normalize();
     }
 
     public Vector3f getRight() {
         return getForward().cross(new Vector3f(0, 1, 0), new Vector3f()).normalize();
     }
 
-    public void setPosition(Vector3f pos) { position.set(pos); updateView(); }
+    public void setPosition(Vector3f pos) {
+        position.set(pos);
+        updateView();
+    }
 
-    public Vector3f getPosition() { return position; }
+    public Vector3f getPosition() {
+        return position;
+    }
 
-    public Matrix4f getViewMatrix() { return new Matrix4f(viewMatrix); }
+    public Matrix4f getViewMatrix() {
+        return new Matrix4f(viewMatrix);
+    }
 
-    public Matrix4f getProjection() { return new Matrix4f(projection); }
+    public Matrix4f getProjection() {
+        return new Matrix4f(projection);
+    }
 }
